--- a/SelfStudy/Kakao_clone/friends.html
+++ b/SelfStudy/Kakao_clone/friends.html
@@ -23,6 +23,32 @@
         </div>
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+    </header>
+
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i>Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="img/ByeongGwan_Seo_profile.jpg" class="user-component__avatar user-component__avatar--xl"/>
+            </div>
+            <div class="user-component__text">
+                <h4 class="user-component__title">Byeong Gwan Seo</h4>
+                <!-- <h6 class="user-component__subtitle">this subtitle</h6> -->
+            </div>
+        </div>
+
+    </main>
+    
 
     <nav class="nav">
         <ul class="nav__list">
