--- a/SelfStudy/Kakao_clone/friends.html
+++ b/SelfStudy/Kakao_clone/friends.html
@@ -46,7 +46,31 @@
                 <!-- <h6 class="user-component__subtitle">this subtitle</h6> -->
             </div>
         </div>
-
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/ByeongGwan_Seo_profile.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     
 
