--- a/SelfStudy/Kakao_clone/find.html
+++ b/SelfStudy/Kakao_clone/find.html
@@ -24,53 +24,30 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Find</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i>
-    </a>
+    
 
-    <main class="friends-screen">
+    <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="img/ByeongGwan_Seo_profile.jpg" class="user-component__avatar user-component__avatar--xl"/>
+                <img src="img/ByeongGwan_Seo_profile.jpg" class="user-component__avatar user-component__avatar"/>
             <div class="user-component__text">
                 <h4 class="user-component__title">Byeong Gwan Seo</h4>
-                <!-- <h6 class="user-component__subtitle">this subtitle</h6> -->
+                <h6 class="user-component__subtitle">Please check my message</h6>
             </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
         </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-              <span>Channel</span>
-              <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="img/ByeongGwan_Seo_profile.jpg"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-                <h4 class="user-component__title user-component__title--not-bold">
-                  Channel
-                </h4>
-              </div>
-            </div>
-            <div class="user-component__column">
-              <div>
-                <span>2</span>
-                <i class="fas fa-chevron-right fa-xs"></i>
-              </div>
-            </div>
-          </div>
         </div>
       </main>
     
@@ -79,23 +56,20 @@
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                    <i class="fas fa-user fa-2x">
-
+                    <i class="far fa-user fa-2x">
                     </i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="far fa-comment fa-2x">
-
+                    <i class="far fa-comment fa-2x"></i>
                     </i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html">
                     <i class="fas fa-search fa-2x">
-
                     </i>
                 </a>
             </li>
@@ -103,7 +77,6 @@
                 <a class="nav__link" href="more.html">
                     <div class="nav__setting-notification"></div>
                     <i class="fas fa-ellipsis-h fa-2x">
-
                     </i>
                 </a>
             </li>
