--- a/SelfStudy/Kakao_clone/chats.html
+++ b/SelfStudy/Kakao_clone/chats.html
@@ -36,6 +36,7 @@
     
 
     <main class="main-screen">
+        <a href="chat.html">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="img/ByeongGwan_Seo_profile.jpg" class="user-component__avatar user-component__avatar"/>
@@ -49,6 +50,7 @@
             <div class="badge">1</div>
         </div>
         </div>
+        </a>
       </main>
     
 
