--- a/SelfStudy/Kakao_clone/friends.html
+++ b/SelfStudy/Kakao_clone/friends.html
@@ -111,6 +111,9 @@
     </nav>
     
     
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
 
     <script src="https://kit.fontawesome.com/69688adaa8.js" crossorigin="anonymous">
     </script>
