--- a/SelfStudy/Kakao_clone/chat.html
+++ b/SelfStudy/Kakao_clone/chat.html
@@ -79,7 +79,9 @@
         </div>
       </form>
 
-
+      <div id="no-mobile">
+        <span>Your screen is too big! >:(</span>
+    </div>
       
 
     <script src="https://kit.fontawesome.com/69688adaa8.js" crossorigin="anonymous">
