--- a/SelfStudy/Kakao_clone/friends.html
+++ b/SelfStudy/Kakao_clone/friends.html
@@ -115,6 +115,10 @@
         <i class="fas fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+        <span>Your screen is too big! >:(</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/69688adaa8.js" crossorigin="anonymous">
     </script>
 </body>
