--- a/SelfStudy/Kakao_clone/index.html
+++ b/SelfStudy/Kakao_clone/index.html
@@ -38,7 +38,9 @@
         <a href="#">Find KaKao Clone Account or Password</a>
     </form>
 
-    
+    <div id="no-mobile">
+        <span>Your screen is too big! >:(</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/69688adaa8.js" crossorigin="anonymous">
     </script>
