--- a/SelfStudy/Kakao_clone/more.html
+++ b/SelfStudy/Kakao_clone/more.html
@@ -126,7 +126,9 @@
         </ul>
     </nav>
     
-    
+    <div id="no-mobile">
+        <span>Your screen is too big! >:(</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/69688adaa8.js" crossorigin="anonymous">
     </script>
