주병관 버튼 작성
.....

--- a/SelfStudy/home3.html
+++ b/SelfStudy/home3.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="kr">
-    <head>
-        <link
-            rel="shortcut icon"
-            sizes="16x32 64x64"
-            href="https://nomadcoders.co/m.png"
-        />
-        <title>Home3 - My first Website</title>
-        <meta charset="utf-8"/>
-        <meta name="description" content="This is my Website">
-    </head>
-    <body>
-       <header>
-        <h1>gom times</h1>
-       </header>
 
-       <main>
+<head>
+    <link rel="shortcut icon" sizes="16x32 64x64" href="https://nomadcoders.co/m.png" />
+    <title>Home3 - My first Website</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="This is my Website">
+</head>
+
+<body>
+    <header>
+        <h1>gom times</h1>
+    </header>
+
+    <main>
         <p>hello!</p>
         <button>made by BG</button>
-       </main>
+    </main>
 
-       <footer>
+    <footer>
         &copy; 2021 bg.s
 
-       </footer>
-    </body>
+    </footer>
+    <button>jbk</button>
+</body>
+
 </html>
